--- a/css/filtertester.css
+++ b/css/filtertester.css
@@ -30,6 +30,7 @@ body {
 }
 
 #image-container {
+  float: left;
   margin-top: 8px;
 }
 
@@ -43,18 +44,21 @@ body {
 
 .image-select-label {}
 
-#filter-container {
-  margin-top: 10px;
-  padding-top: 8px;
-  padding-left: 2px;
-}
 
 #filter-text-container {
-  margin-top: 8px;
+  padding-top: 12px;
+  font-size: 14px;
 }
 
 #filter-text-container-title {
   font-weight: bold;
+}
+
+#filter-container {
+  clear: left;
+  margin-top: 10px;
+  padding-top: 8px;
+  padding-left: 2px;
 }
 
 .control-button {
