--- a/css/filtertester.css
+++ b/css/filtertester.css
@@ -32,12 +32,13 @@ body {
 #image-container {
   float: left;
   margin-top: 8px;
+  margin-bottom: 10px;
 }
 
 #image {
-  height: 200px;
+  height: 150px;
   width: auto;
-  border: 1px solid var(--MV-black);
+  border: 1px solid var(--very-light-gray);
 }
 
 .image-select {}
@@ -45,20 +46,41 @@ body {
 .image-select-label {}
 
 
-#filter-text-container {
+.text-container {
   padding-top: 12px;
   font-size: 14px;
 }
 
-#filter-text-container-title {
+.text-container-title {
   font-weight: bold;
 }
 
 #filter-container {
   clear: left;
-  margin-top: 10px;
-  padding-top: 8px;
-  padding-left: 2px;
+  padding-top: 4px;
+  padding-left: 4px;
+  border: 1px solid var(--very-light-gray);
+  border-radius: 6px;  
+}
+
+#border-container {
+  margin-top: 8px;
+  padding-top: 4px;
+  padding-left: 4px;
+  border: 1px solid var(--very-light-gray);
+  border-radius: 6px;
+}
+
+#filter-container-title {
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 8px;
+}
+
+#border-container-title {
+  font-size: 14px;
+  font-weight: bold;
+  margin-right: 8px;
 }
 
 .control-button {
