--- a/css/filtertester.css
+++ b/css/filtertester.css
@@ -73,6 +73,14 @@ body {
   font-weight: bold;
 }
 
+.effect-container-title {
+  font-weight: bold;
+}
+
+#filter-container {
+  margin-bottom: 10px;
+}
+
 .primary-button {
   color: var(--MV-white);
   background-color: var(--MV-light-teal);
@@ -95,6 +103,13 @@ body {
   background-color: var(--MV-white);
   border: 2px solid var(--MV-light-teal);
   border-radius: 6px;
+}
+
+.defaults-button {
+  font-size: 10px;
+  margin-left: 8px;
+  padding-left: 2px;
+  padding-right: 2px;
 }
 
 .flex-container {
